# transfer_flatfile_format

./: .gitignore  README.md  pyproject.toml
test/: test_cli.py  test_gsheet.py
transfer_flatfile_format/: __main__.py  cli.py
