[tool.poetry]
name = "transfer_flatfile_format"
version = "0.1.0"
description = ""
authors = ["Sebastian Fricke <sebastian.fricke.linux@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.1"
pickle = "^0.0.11"
googleapiclient = "^0.0.6"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
