[tool.poetry]
name = "transfer_flatfile_format"
version = "0.1.1"
description = "Move data inbetween different Amazon flatfile formats to the correct locations."
authors = ["Sebastian Fricke <sebastian.fricke.linux@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ['flatfile', 'amazon', 'gsheet']

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.1"
numpy = "^1.19.1"
google-api-python-client = "^1.11.0"
google-auth-httplib2 = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
